<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.avisio.dashboard.usecase.MainActivity">
    <item
        android:id="@+id/dashboard_list_search"
        android:orderInCategory="50"
        android:title="@string/search_dashboard_item_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stop_workflow"
        android:icon="@drawable/ic_close"
        android:orderInCategory="25"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename_folder"
        android:orderInCategory="110"
        android:title="@string/action_rename_folder"
        app:showAsAction="never" />
</menu>