...

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_move_selected_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
...
